Fix youtube iframe double scrollbar issue

--- a/_sass/pages/_posts.scss
+++ b/_sass/pages/_posts.scss
@@ -142,6 +142,7 @@
 .yt {
   position: relative;
   padding-bottom: 56.25%;
+  overflow: hidden;
 
   iframe {
     position: absolute;
